# udacity-dend

./: README.md
1. Data Modeling/1. RDMS Modeling/: create_tables.py  sql_queries.py
1. Data Modeling/2. NoSQL Modeling/: README.md  notebook.ipynb  pyproject.toml
1.data_modeling/1.1.relation_databases_modeling/: .env.sample  .gitignore  README.md  create_tables.py  etl.py  pyproject.toml  sql_queries.py
1_Data_Modeling/1_RDMS/: etl.py
1_Data_Modeling/2_NoSQL/: notebook.ipynb  pyproject.toml
