[tool.poetry]
name = "udacity_sparkify_cassandra"
version = "0.1.0"
description = "Udacity Data Engineer Nanodegree"
authors = ["Mohamed Elzarei <mohamed.elzarei@gmail.com>"]

[tool.black]
line-length = 80

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8.4"
pandas = "^1.0.3"
python-dotenv = "^0.12.0"
cassandra-driver = "^3.22.0"
numpy = "^1.18.2"
notebook = "^6.0.3"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
