[tool.poetry]
name = "udacity_sparkify_pg"
version = "0.1.0"
description = "Udacity Data Engineer Nanodegree"
authors = ["Mohamed Elzarei <mohamed.elzarei@gmail.com>"]

[tool.black]
line-length = 80

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8.4"
pandas = "^1.0.3"
tqdm = "^4.43.0"
python-dotenv = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
